[gd_scene load_steps=16 format=3 uid="uid://kn6sc3i51v68"]

[ext_resource type="Texture2D" uid="uid://1fby7roakekt" path="res://Assets/ForthrightGround.png" id="1_67dsq"]
[ext_resource type="Texture2D" uid="uid://b7ndch47g7nbq" path="res://Assets/PlayerWalk/walk1.png" id="2_d61ku"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="2_xn2c1"]
[ext_resource type="Texture2D" uid="uid://dml845qhixq2v" path="res://Assets/PlayerWalk/walk2.png" id="3_c7qa2"]
[ext_resource type="Texture2D" uid="uid://dperj3nk13lby" path="res://Assets/PlayerHoe/HoeUp.png" id="3_qlt6g"]
[ext_resource type="Texture2D" uid="uid://cebcwfih53gyx" path="res://Assets/PlayerHoe/HoeDown.png" id="4_64wpu"]
[ext_resource type="Texture2D" uid="uid://b6knf4jddjt6f" path="res://Assets/PlayerScatterSeeds/Scatter1.png" id="5_3ociw"]
[ext_resource type="Texture2D" uid="uid://du6coe8btc8yv" path="res://Assets/PlayerScatterSeeds/Scatter2.png" id="6_kokui"]
[ext_resource type="PackedScene" uid="uid://ckohkgw1l2u20" path="res://Scenes/ground_hoe.tscn" id="7_l33ux"]
[ext_resource type="Script" path="res://Scripts/ItemList.gd" id="8_xgop5"]
[ext_resource type="PackedScene" uid="uid://ceykm7kq5xfg6" path="res://Scenes/corn_seeds.tscn" id="11_vjc0e"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_go167"]
texture = ExtResource("1_67dsq")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
5:0/0 = 0
4:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSet" id="TileSet_7wpdh"]
sources/0 = SubResource("TileSetAtlasSource_go167")

[sub_resource type="SpriteFrames" id="SpriteFrames_k78tv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_qlt6g")
}, {
"duration": 1.0,
"texture": ExtResource("4_64wpu")
}],
"loop": true,
"name": &"HoeGround",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_3ociw")
}, {
"duration": 1.0,
"texture": ExtResource("6_kokui")
}],
"loop": true,
"name": &"ScatterSeeds",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_d61ku")
}, {
"duration": 1.0,
"texture": ExtResource("3_c7qa2")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_myyvs"]
size = Vector2(23, 50)

[node name="Main" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 3
scale = Vector2(4, 4)
tile_set = SubResource("TileSet_7wpdh")
format = 2
layer_0/tile_data = PackedInt32Array(1, 327680, 0, 2, 327680, 0, 3, 327680, 0, 4, 327680, 0, 5, 327680, 0, 6, 327680, 0, 7, 327680, 0, 8, 327680, 0, 65544, 327680, 0, 131080, 327680, 0, 196616, 327680, 0, 262151, 327680, 0, 262150, 327680, 0, 262149, 327680, 0, 262148, 327680, 0, 262147, 327680, 0, 262146, 327680, 0, 327680, 327680, 0, 327681, 327680, 0, 327682, 327680, 0, 327683, 327680, 0, 327684, 327680, 0, 327685, 327680, 0, 327686, 327680, 0, 9, 327680, 0, 10, 327680, 0, 11, 327680, 0, 12, 327680, 0, 13, 327680, 0, 14, 327680, 0, 15, 327680, 0, 16, 327680, 0, 17, 327680, 0, 65553, 327680, 0, 131089, 327680, 0, 196625, 327680, 0, 262161, 327680, 0, 327697, 327680, 0, 393233, 327680, 0, 393234, 327680, 0, 458770, 327680, 0, 524306, 327680, 0, 589842, 327680, 0, 0, 327680, 0, 65536, 327680, 0, 131072, 327680, 0, 196608, 327680, 0, 262144, 327680, 0, 393216, 327680, 0, 458752, 327680, 0, 524288, 327680, 0, 589824, 327680, 0, 589825, 327680, 0, 589826, 327680, 0, 589827, 327680, 0, 524292, 327680, 0, 589828, 327680, 0, 589829, 327680, 0, 524294, 327680, 0, 589831, 327680, 0, 589832, 327680, 0, 589833, 327680, 0, 589834, 327680, 0, 589835, 327680, 0, 589836, 327680, 0, 589837, 327680, 0, 589838, 327680, 0, 589839, 327680, 0, 589840, 327680, 0, 589841, 327680, 0, 589830, 327680, 0, 524289, 327680, 0, 524290, 327680, 0, 524291, 327680, 0, 524293, 327680, 0, 524296, 327680, 0, 524297, 327680, 0, 524298, 327680, 0, 524299, 327680, 0, 524300, 327680, 0, 524301, 327680, 0, 524302, 327680, 0, 524303, 327680, 0, 524304, 327680, 0, 524305, 327680, 0, 458769, 327680, 0, 458768, 327680, 0, 458767, 327680, 0, 458766, 327680, 0, 458765, 327680, 0, 458764, 327680, 0, 458763, 327680, 0, 458762, 327680, 0, 458761, 327680, 0, 458760, 327680, 0, 393224, 327680, 0, 393222, 327680, 0, 393221, 327680, 0, 393220, 327680, 0, 393219, 327680, 0, 458755, 327680, 0, 458754, 327680, 0, 458753, 327680, 0, 393217, 327680, 0, 393218, 327680, 0, 458758, 327680, 0, 458757, 327680, 0, 458756, 327680, 0, 393226, 327680, 0, 327689, 327680, 0, 262153, 327680, 0, 196617, 327680, 0, 131081, 327680, 0, 65545, 327680, 0, 65547, 327680, 0, 65548, 327680, 0, 131085, 327680, 0, 131086, 327680, 0, 196622, 327680, 0, 262157, 327680, 0, 327692, 327680, 0, 393228, 327680, 0, 393227, 327680, 0, 327691, 327680, 0, 262155, 327680, 0, 262154, 327680, 0, 262156, 327680, 0, 393225, 327680, 0, 327690, 327680, 0, 196620, 327680, 0, 131083, 327680, 0, 131082, 327680, 0, 65546, 327680, 0, 65549, 327680, 0, 65550, 327680, 0, 65551, 327680, 0, 65552, 327680, 0, 131088, 327680, 0, 196624, 327680, 0, 262160, 327680, 0, 327696, 327680, 0, 393232, 327680, 0, 393231, 327680, 0, 393230, 327680, 0, 393229, 327680, 0, 327693, 327680, 0, 262158, 327680, 0, 262159, 327680, 0, 196623, 327680, 0, 131087, 327680, 0, 327695, 327680, 0, 327694, 327680, 0, 196621, 327680, 0, 131084, 327680, 0, 196619, 327680, 0, 196618, 327680, 0, 196615, 327680, 0, 196614, 327680, 0, 131078, 327680, 0, 131077, 327680, 0, 65541, 327680, 0, 65542, 327680, 0, 65543, 327680, 0, 65540, 327680, 0, 65539, 327680, 0, 65538, 327680, 0, 65537, 327680, 0, 131073, 327680, 0, 196609, 327680, 0, 262145, 327680, 0, 131074, 327680, 0, 196610, 327680, 0, 196611, 327680, 0, 196612, 327680, 0, 131076, 327680, 0, 131075, 327680, 0, 196613, 327680, 0, 131079, 327680, 0, 327698, 327680, 0, 262162, 327680, 0, 196626, 327680, 0, 131090, 327680, 0, 65554, 327680, 0, 18, 327680, 0, 262152, 327680, 0, 327688, 327680, 0, 327687, 327680, 0, 393223, 327680, 0, 458759, 327680, 0, 524295, 327680, 0)

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(220, 136)
script = ExtResource("2_xn2c1")
metadata/_edit_group_ = true

[node name="PlayerAnimation" type="AnimatedSprite2D" parent="Player"]
texture_filter = 3
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_k78tv")
animation = &"Walk"
frame_progress = 0.878863

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(-1.5, 3)
shape = SubResource("RectangleShape2D_myyvs")

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ItemList" type="ItemList" parent="UserInterface"]
layout_mode = 0
offset_left = 967.0
offset_top = 34.0
offset_right = 1141.0
offset_bottom = 587.0
allow_reselect = true
fixed_icon_size = Vector2i(16, 16)
script = ExtResource("8_xgop5")

[node name="GroundHoe" parent="." instance=ExtResource("7_l33ux")]
position = Vector2(283, 189)
scale = Vector2(0.108065, 0.103226)

[node name="CornSeeds" parent="." instance=ExtResource("11_vjc0e")]
position = Vector2(186.5, 221.562)
scale = Vector2(3.9375, 4.57031)

[node name="CornSeeds2" parent="." instance=ExtResource("11_vjc0e")]
position = Vector2(91, 230)
scale = Vector2(3.9375, 4.57031)

[node name="CornSeeds3" parent="." instance=ExtResource("11_vjc0e")]
position = Vector2(92, 148)
scale = Vector2(3.9375, 4.57031)

[connection signal="item_changed" from="UserInterface/ItemList" to="Player" method="_on_item_list_item_changed"]
[connection signal="item_clicked" from="UserInterface/ItemList" to="UserInterface/ItemList" method="_on_item_clicked"]
[connection signal="item_selected" from="UserInterface/ItemList" to="UserInterface/ItemList" method="_on_item_selected"]
[connection signal="grabbed" from="GroundHoe" to="UserInterface/ItemList" method="_on_snaggable_grabbed"]
[connection signal="grabbed" from="CornSeeds" to="UserInterface/ItemList" method="_on_snaggable_grabbed"]
[connection signal="grabbed" from="CornSeeds2" to="UserInterface/ItemList" method="_on_snaggable_grabbed"]
[connection signal="grabbed" from="CornSeeds3" to="UserInterface/ItemList" method="_on_snaggable_grabbed"]
